# harbor

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: mixed_population.yaml  momentum_baseline.yaml  q1_null_template.yaml  q1_treatment_template.yaml
configs/abf/: README.md  q1_shock_definitions.json  q2_regime_definitions.json
configs/agents/: homogeneous_momentum.json  mixed_population.json
configs/risk/: README.md  scenarios.json
dashboard/: README.md  asset-dashboard.jsx  asset-man-dash-v2.jsx  notes.md
data/: notes.md
data/universe/: README.md  notes.md  sp500_membership.csv
docs/: HARBOR Asset Management Algorithm Iteration History.md  PROJECT_EVOLUTION.md  README.md  abf-prd.md  abf-q1-research-summary.md  iteration-history.md  journal.md  notes.md  phase2-sprint-plan.md  plan.md
experiments/: README.md  abf_q1_main.py  h1_end_to_end_hrp_backtest.py  h2_risk_engine_demo.py  h3_agent_simulation_demo.py  notes.md  q1_analysis.py  q1_batch_runner.py  rl_agent_train.py  rl_multi_agent_sim.py  vol_forecast_train.py
hangar/: __init__.py  notes.md
hangar/abf/: __init__.py
hangar/agents/: __init__.py  autonomous_agent.py  base_agent.py  config.py  environment.py  metrics.py  rule_agents.py  simulation.py
hangar/backtest/: __init__.py  engine.py  metrics.py
hangar/data/: __init__.py  load_prices.py
hangar/features/: __init__.py
hangar/homelab/: __init__.py  __main__.py  ablation.py  batch.py  config.py  runner.py
hangar/ml/: __init__.py  checkpoints.py  notes.md
hangar/portfolio/: __init__.py  construction.py  notes.md
hangar/retail/: __init__.py
hangar/risk/: __init__.py  correlation.py  covariance.py  decomposition.py  engine.py  hrp.py  monte_carlo.py  notes.md  scenarios.py
harbor/: __init__.py  v1_paper_trading.py
harbor/abf/: __init__.py
harbor/agents/: __init__.py  base_agent.py  config.py  metrics.py  simulation.py
harbor/backtest/: __init__.py  metrics.py
harbor/ml/: __init__.py  (+1 more)
notebooks/: README.md  Wharton_Algo_Test_(v0_5).ipynb  Wharton_Algo_V5_Claude.ipynb  abf_q1_persistence_reversal.ipynb  abf_q1_shock_definition.ipynb  v1_0_HANGAR_YIS_Variant.ipynb  v1_0_HARBROR_YIS_Variant.ipynb  v1_0_MVO_+_Monte_Carlo_Sim.ipynb  v1_HARBOR_Paper_Trading_Algorithm.ipynb  v1_guarded_Paper_Trading_Algorithm.ipynb  v2_HANGAR_Paper_Trading_Algorithm.ipynb  v2_HARBOR_Paper_Trading_Algorithm.ipynb
research/: README.md  q1_emergent_coordination.md
tests/: test_abf_q1.py  test_agents.py  test_autonomous_agent.py  test_backtest_metrics.py  test_ml_agent.py  test_ml_baselines.py  test_ml_checkpoints.py  test_ml_environment.py  test_ml_rewards.py  test_ml_volatility.py  test_risk.py  test_risk_h2.py  test_v1_paper_trading.py
(+503 files in other folders)
