[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hangar-asset-management"
version = "0.2.0-dev"
description = "Research-focused risk and portfolio framework (HANGAR) with ABF research layer."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Lewis Smith" }]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.10",
    "matplotlib>=3.6",
    "yfinance>=0.2",
    "statsmodels>=0.14",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["hangar*"]
exclude = ["hangar.signals", "hangar.research"]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "gymnasium>=0.29",
    "ray[rllib]>=2.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["hangar/v1_paper_trading.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["UP006", "UP007", "UP035", "UP045"]

[tool.ruff.lint.isort]
known-first-party = ["hangar"]
